--- a/daikaisen/daikaisen.vcxproj
+++ b/daikaisen/daikaisen.vcxproj
@@ -149,7 +149,9 @@
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="ImageMng.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Obj.cpp" />
     <ClCompile Include="SceneMng.cpp" />
+    <ClCompile Include="Ship.cpp" />
     <ClCompile Include="VECTOR2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -157,7 +159,9 @@
     <ClInclude Include="GameCtl.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="ImageMng.h" />
+    <ClInclude Include="Obj.h" />
     <ClInclude Include="SceneMng.h" />
+    <ClInclude Include="Ship.h" />
     <ClInclude Include="VECTOR2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
