5月制作提出

--- a/daikaisen/daikaisen.vcxproj
+++ b/daikaisen/daikaisen.vcxproj
@@ -150,8 +150,10 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene\BaseScene.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
+    <ClCompile Include="Scene\ResultScene.cpp" />
     <ClCompile Include="Scene\SceneMng.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
+    <ClCompile Include="Unit\Aircraft.cpp" />
     <ClCompile Include="Unit\Bullet.cpp" />
     <ClCompile Include="Unit\Enemy.cpp" />
     <ClCompile Include="Unit\Friend.cpp" />
@@ -166,8 +168,10 @@
     <ClInclude Include="Common\Vector2.h" />
     <ClInclude Include="Scene\BaseScene.h" />
     <ClInclude Include="Scene\GameScene.h" />
+    <ClInclude Include="Scene\ResultScene.h" />
     <ClInclude Include="Scene\SceneMng.h" />
     <ClInclude Include="Scene\TitleScene.h" />
+    <ClInclude Include="Unit\Aircraft.h" />
     <ClInclude Include="Unit\Bullet.h" />
     <ClInclude Include="Unit\Enemy.h" />
     <ClInclude Include="Unit\Friend.h" />
